--- a/VCamSampleSource/VCamSampleSource.vcxproj.filters
+++ b/VCamSampleSource/VCamSampleSource.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="MFTools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FrameGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -74,11 +77,17 @@
     <ClCompile Include="MFTools.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FrameGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="VCamSampleSource.def">
       <Filter>Source Files</Filter>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
   </ItemGroup>
 </Project>
