--- a/VCamSampleSource/VCamSampleSource.vcxproj
+++ b/VCamSampleSource/VCamSampleSource.vcxproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="Activator.h" />
     <ClInclude Include="EnumNames.h" />
+    <ClInclude Include="FrameGenerator.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MediaSource.h" />
     <ClInclude Include="MediaStream.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="Activator.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="EnumNames.cpp" />
+    <ClCompile Include="FrameGenerator.cpp" />
     <ClCompile Include="MediaSource.cpp" />
     <ClCompile Include="MediaStream.cpp" />
     <ClCompile Include="MFTools.cpp" />
