--- a/VCamSampleSource/VCamSampleSource.vcxproj.filters
+++ b/VCamSampleSource/VCamSampleSource.vcxproj.filters
@@ -97,5 +97,6 @@
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natstepfilter" />
   </ItemGroup>
 </Project>
